--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main></main>
   <footer></footer>
   <div id="Catalago"></div>
-  <script src="/js/index.js"></script>
+  <script src="index.js"></script>
   <script>
       function teste(){
         window.location.href = "admin.html"
